force-app/main/default/objects/Requirement__c/fields/Cancelled_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Notes__c</fullName>
    <inlineHelpText>You must enter an explanation in this field when a Requirement is Cancelled.  After you&apos;ve entered a Cancelled Date and the explanation in this field, then saved the changes, the status of the Requirement will change to Cancelled.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>