force-app/main/default/objects/Requirement__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <inlineHelpText>After you&apos;ve entered a Completed Date and saved this change, the status of the Requirement will change to &apos;Completed&apos;.</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>