force-app/main/default/objects/Requirement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>The Name and Description of the Requirement are displayed in the Investment Schedule.  These should clearly describe what is required.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>