force-app/main/default/objects/Requirement__c/fields/Hold_Payments__c.field-meta.xml
<CustomField>
    <fullName>Hold_Payments__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this requirement becomes overdue, it will automatically hold all payments for the associated Initiative that have a Payment due date after the Requirement due date.</inlineHelpText>
    <label>Hold Payments</label>
    <type>Checkbox</type>
</CustomField>