force-app/main/default/objects/Requirement__c/fields/Initiatives_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Initiatives_Owner_Email__c</fullName>
    <label>Initiatives Owner Email</label>
    <type>Email</type>
</CustomField>