force-app/main/default/objects/Requirement__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <formula>Plan__r.P_Name__c</formula>
    <label>Plan</label>
    <type>Text</type>
</CustomField>