force-app/main/default/objects/Requirement__c/fields/Reporting_Type__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Type__c</fullName>
    <label>Reporting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Written</fullName>
            </value>
            <value>
                <fullName>Verbal with Documentation</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Sport NZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>