force-app/main/default/objects/Requirement__c/fields/Requirement_ID__c.field-meta.xml
<CustomField>
    <fullName>Requirement_ID__c</fullName>
    <displayFormat>RQ{000000}</displayFormat>
    <label>Requirement ID</label>
    <type>AutoNumber</type>
</CustomField>