force-app/main/default/objects/Requirement__c/fields/Requirement_ID_Link__c.field-meta.xml
<CustomField>
    <fullName>Requirement_ID_Link__c</fullName>
    <formula>HYPERLINK(Id,Requirement_ID__c, &quot;_self&quot;)</formula>
    <label>Requirement ID Link</label>
    <type>Text</type>
</CustomField>