force-app/main/default/objects/Requirement__c/fields/Requirement_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Record_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Record ID</label>
    <type>Text</type>
</CustomField>