force-app/main/default/objects/Requirement__c/fields/Requirement_Reporting_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Reporting_Record_Type__c</fullName>
    <description>This field will be used to determine whether Reporting is enabled for Partner users or not</description>
    <label>Requirement Reporting Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CS Case Study</fullName>
            </value>
            <value>
                <fullName>CS Board Diversity</fullName>
            </value>
            <value>
                <fullName>PI National</fullName>
            </value>
            <value>
                <fullName>PI Regional</fullName>
            </value>
            <value>
                <fullName>PI National + 1</fullName>
            </value>
            <value>
                <fullName>PI National + 2</fullName>
            </value>
            <value>
                <fullName>PI National + 3</fullName>
            </value>
            <value>
                <fullName>PI National + 4</fullName>
            </value>
            <value>
                <fullName>PI Regional + 1</fullName>
            </value>
            <value>
                <fullName>PI Regional + 2</fullName>
            </value>
            <value>
                <fullName>PI Regional + 3</fullName>
            </value>
            <value>
                <fullName>PI Regional + 4</fullName>
            </value>
            <value>
                <fullName>PI National 1</fullName>
            </value>
            <value>
                <fullName>PI National 2</fullName>
            </value>
            <value>
                <fullName>PI National 3</fullName>
            </value>
            <value>
                <fullName>PI National 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>