force-app/main/default/objects/Requirement__c/fields/RRD_Status__c.field-meta.xml
<CustomField>
    <fullName>RRD_Status__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>RRD Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>