force-app/main/default/objects/Requirement__c/fields/RUL_Old_RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>RUL_Old_RecordType_Id__c</fullName>
    <description>This filed contains the record type id of the record except read only record type.</description>
    <label>Old RecordType Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>