force-app/main/default/objects/Requirement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <color>#FF9900</color>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <color>#009900</color>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Overdue</fullName>
                <color>#FF0000</color>
                <label>Overdue</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#DDDDDD</color>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Variation</fullName>
                <color>#BBBBBB</color>
                <label>Variation</label>
            </value>
            <value>
                <fullName>Draft</fullName>
                <color>#666666</color>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <color>#333333</color>
                <label>Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>