force-app/main/default/objects/Requirement__c/fields/Status_Image__c.field-meta.xml
<CustomField>
    <fullName>Status_Image__c</fullName>
    <formula>IF(
  ISBLANK(
    TEXT(  Status__c )
   ),null,
IMAGE(CASE(TEXT(  Status__c  ),
&quot;Pending&quot;, $Setup.Icons__c.Grey__c ,
&quot;Completed&quot;, $Setup.Icons__c.Green__c ,
&quot;Cancelled&quot;, $Setup.Icons__c.Yellow__c,
&quot;Overdue&quot;,$Setup.Icons__c.Red__c,
&quot;Variation&quot;,$Setup.Icons__c.Orange__c,&quot;&quot;),&quot;&quot;))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>