force-app/main/default/objects/Requirement__c/recordTypes/Initiative_Requirement.recordType-meta.xml
<RecordType>
    <fullName>Initiative_Requirement</fullName>
    <active>true</active>
    <description>For applying conditions and requirements to initiatives. Can hold all payments in the initiative if the &apos;Hold&apos; box is checked.</description>
    <label>Initiative Requirement</label>
</RecordType>