force-app/main/default/objects/Requirement__c/recordTypes/Initiative_Requirement_Completed_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Initiative_Requirement_Completed_Read_Only</fullName>
    <active>true</active>
    <description>This record type will be used to prevent edit of record when Inv schedule status is Approved or Signed.</description>
    <label>Initiative Requirement Completed Read Only</label>
</RecordType>