force-app/main/default/objects/Requirement__c/recordTypes/Requirement_Completed.recordType-meta.xml
<RecordType>
    <fullName>Requirement_Completed</fullName>
    <active>true</active>
    <label>Initiative Requirement Completed</label>
</RecordType>