force-app/main/default/objects/Requirement__c/recordTypes/RUL_Initiative_Requirement_ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>RUL_Initiative_Requirement_ReadOnly</fullName>
    <active>true</active>
    <description>This record type will be used to prevent edit of record when Inv schedule status is Approved or Signed.</description>
    <label>Initiative Requirement Read Only</label>
</RecordType>