force-app/main/default/objects/Requirement__c/validationRules/Cancellation_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Cancelled_Date__c )),
LEN (  Cancelled_Notes__c  ) = 0
)</errorConditionFormula>
    <errorDisplayField>Cancelled_Notes__c</errorDisplayField>
    <errorMessage>Please populate the cancellation notes</errorMessage>
</ValidationRule>