force-app/main/default/objects/Requirement__c/validationRules/Cannot_change_Reporting_Rec_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_Reporting_Rec_Type</fullName>
    <active>true</active>
    <description>This rule will restrict the Internal User to assign Requirement Reporting Detail (record type) to Requirement with status other than Draft or Variation</description>
    <errorConditionFormula>AND( 
$Profile.Name  &lt;&gt; &apos;System Administrator&apos;, 
OR(AND(NOT(ISPICKVAL(Status__c , &apos;Pending&apos;)), 
ISCHANGED(Requirement_Reporting_Record_Type__c)),
AND(ISCHANGED(Requirement_Reporting_Record_Type__c), 
ISCHANGED(Due_Date__c),
Due_Date__c &lt; TODAY() ),
AND(ISNEW(),Due_Date__c  &lt;  TODAY(),
NOT(ISBLANK(TEXT(Requirement_Reporting_Record_Type__c))))))</errorConditionFormula>
    <errorDisplayField>Requirement_Reporting_Record_Type__c</errorDisplayField>
    <errorMessage>Requirement Reporting Detail record type can assign only when Requirement status is Pending</errorMessage>
</ValidationRule>