force-app/main/default/objects/Requirement__c/validationRules/Completion_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Completion_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval(Status__c,&quot;Completed&quot;) &amp;&amp; isblank(Completed_Date__c)</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Please enter a Completed Date</errorMessage>
</ValidationRule>