force-app/main/default/objects/Requirement__c/validationRules/Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Due_Date</fullName>
    <active>true</active>
    <description>Ensures the due date for a new Requirement cannot be backdated in the past.</description>
    <errorConditionFormula>isnew() &amp;&amp; Due_Date__c &lt;= today()</errorConditionFormula>
    <errorDisplayField>Due_Date__c</errorDisplayField>
    <errorMessage>The Due Date for a new Requirement must be a future date.</errorMessage>
</ValidationRule>