force-app/main/default/objects/Requirement__c/validationRules/Partner_Edit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Edit_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(CONTAINS($Profile.Name,&apos;Partner&apos;),ISCHANGED(Name) ),true,false)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Partner Users are not permitted to update the Requirement Name</errorMessage>
</ValidationRule>