force-app/main/default/objects/Requirement__c/listViews/By_Name.listView-meta.xml
<ListView>
    <fullName>By_Name</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>insight</value>
    </filters>
    <label>By Name</label>
</ListView>