force-app/main/default/objects/Requirement__c/listViews/Overdue_Requirements.listView-meta.xml
<ListView>
    <fullName>Overdue_Requirements</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>Partner__c</columns>
    <columns>Initiative__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Hold_Payments__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Plan__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Initiatives_Owner_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <filters>
        <field>Hold_Payments__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Overdue Requirements that Hold Payments</label>
</ListView>