force-app/main/default/objects/Requirement__c/listViews/Requirements_that_are_OVERDUE.listView-meta.xml
<ListView>
    <fullName>Requirements_that_are_OVERDUE</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Partner__c</columns>
    <columns>Initiative__c</columns>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Hold_Payments__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Plan__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Initiatives_Owner_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending,Overdue</value>
    </filters>
    <label>Overdue Requirements</label>
</ListView>